
0.9.9d Oct 20, 2004
 * changed requirement for glibc to glibc-solibs
 * documentation updates
 * misc code cleanups

0.9.9c Oct 13, 2004
 * updated src/transaction.c:add_deps_to_trans() for new get_pkg_dependencies
 * finally cleaned up get_pkg_dependencies, now --ignore-dep only ignores the
   broken dep, not all deps if one is broken
 * changed --disable-dep-check to --no-dep
 * changed --no-dep to --ignore-dep
 * merged Michel Hermier's purge_old_cached_pkgs() patch with some modifications
 * merged Michel Hermier's ask_yes_no() patch to common.[ch] and transation.c
 * added init_pkg_action_args() and free_pkg_action_args()
 * merged Michel Hermier's main.c patch cleaning up main
 * added support for debian style "or" conditional in slack-required
 * moved clean_pkg_dir() from configuration.[ch] to package.[ch]
 * fixed null short description from printing "null", prints "" instead
 * updated man page
 * translation updates
 * added --autoclean option to run purge_old_cached_pkgs() instead of automatically
   at the end of each transation (thanks Michel Hermier)
 * added purge_old_cached_pkgs() to be run at the end of each transaction
   (thanks Michel Hermier)
 * removed unneeded checks for WORKINGDIR_TOKEN_LEN and EXCLUDE_TOKEN_LEN in
   configuration parsing (thanks Peter Santoro)
 * added Greek translation by Savvas Efstratiadis
 * updated doinst.sh so that it doesn't try to do an in place file edit
   with sed as Slackware 8.1 and 9.1's sed doesn't support -i.
   Thanks to Peter Santoro.

0.9.9b Sep 22, 2004
 * searching packages now searches version string along with name,
   location, and description
 * updated makefile, doinst.sh generated script sed's slapt-getrc updating
   comment on /usr/doc/slapt-get*/ directory
 * added FAQ: 49. How can I downgrade a package?
 * added FAQ: 48. What is a meta package and how can I take advantage of it?
 * updated FAQ, added new Q: Will slapt-get break my system?